# CodeAtlas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MAKEFILE  README.md  docker-compose.yml  pyproject.toml  response.txt
.github/workflows/: ci.yml
.streamlit/: app.toml  config.toml  export_requirements.sh
codebase_explainer/: cli.py  clone.py  graph.py  parse.py  utils.py  visualize.py
data/Guess-The-ELO/: wiki.md
deepwiki_output/Data-Science-Project-Boilerplate/: index.md
deepwiki_output/Guess-The-ELO/: wiki.md
deepwiki_output/deepwiki-open/: index.md
src/: 01_DeepWiki_App.py  app.py  deepwiki_client.py  deepwiki_wrapper.py
src/pages/: 02_Code_Docs.py
tests/: test_smoke.py
